--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-<!--learn flask python and integrate it into here and make a chrome extension!-->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Python</title>
 </head>
 <body>
-    
+    <form action = "/cgi-bin/index.py" method = "post">
+        First Name: <input type = "text" name = "first_name"><br />
+        Last Name: <input type = "text" name = "last_name" />
+        
+        <input type = "submit" value = "Submit" />
+    </form>
 </body>
 </html>
